<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/SignupButton"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundgradient"
    tools:context=".UI.LoginActivity">

    <ImageView
        android:id="@+id/HopeHealthActionImage"
        android:layout_width="match_parent"
        android:layout_height="173dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@null"
        android:contentDescription="@string/hopehealthactionlogo"
        app:layout_constraintBottom_toTopOf="@+id/LoginPageTextBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo_w_text"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/LoginPageTextBox"
        android:layout_width="296dp"
        android:layout_height="74dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/community_based_rehab_manager"
        android:textColor="#9D1BEC"
        android:textColorHighlight="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HopeHealthActionImage" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="257dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/loginpageroundstyle"
        android:orientation="horizontal"
        android:radius="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginPageTextBox">

        <EditText
            android:id="@+id/usernameTextBox"
            android:layout_marginHorizontal="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="159dp"
            android:ems="10"
            android:hint="@string/enter_username"
            android:inputType="textPersonName"
            android:autofillHints="" />

        <EditText
            android:id="@+id/passwordTextBox"
            android:layout_marginHorizontal="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="92dp"
            android:ems="10"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:autofillHints="" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="25dp"
            android:text="@string/login"
            app:background="@drawable/login_buttons_rounded"
            android:textColor="@color/black"
            app:backgroundTint="#02FDDF"/>

        <Button
            android:id="@+id/signupButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="25dp"
            android:text="@string/sign_up"
            android:textColor="#090909"
            app:backgroundTint="#02FDDF" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>