<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.visitInfoFragment.VisitInfoFragment">

    <TextView
        android:id="@+id/villageText"
        android:layout_width="144dp"
        android:layout_height="58dp"
        android:layout_marginTop="44dp"
        android:gravity="left"
        android:text="Village Number:"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/locationText"
        app:layout_constraintTop_toBottomOf="@+id/locationText" />

    <TextView
        android:id="@+id/locationText"
        android:layout_width="144dp"
        android:layout_height="58dp"
        android:layout_marginTop="44dp"
        android:gravity="left"
        android:text="Location:"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/dateText"
        app:layout_constraintTop_toBottomOf="@+id/dateText" />

    <TextView
        android:id="@+id/dateText"
        android:layout_width="144dp"
        android:layout_height="58dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="44dp"
        android:gravity="left"
        android:text="Date:"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/purposeText"
        android:layout_width="143dp"
        android:layout_height="108dp"
        android:layout_marginTop="44dp"
        android:gravity="left"
        android:text="Purpose of Visit:"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/villageText"
        app:layout_constraintTop_toBottomOf="@+id/villageText" />

    <TextView
        android:id="@+id/purposeOfVisit"
        android:layout_width="197dp"
        android:layout_height="222dp"
        android:gravity="right"
        android:text="@string/purposeOfVisit"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/villageNumber"
        app:layout_constraintTop_toTopOf="@+id/purposeText" />

    <TextView
        android:id="@+id/dateOfVisit2"
        android:layout_width="152dp"
        android:layout_height="59dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="right"
        android:text="@string/date"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dateText" />

    <TextView
        android:id="@+id/locationOfVisit"
        android:layout_width="153dp"
        android:layout_height="58dp"
        android:gravity="right"
        android:text="@string/location"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/dateOfVisit2"
        app:layout_constraintTop_toTopOf="@+id/locationText" />

    <TextView
        android:id="@+id/villageNumber"
        android:layout_width="149dp"
        android:layout_height="53dp"
        android:gravity="right"
        android:text="@string/villageNumber"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/locationOfVisit"
        app:layout_constraintTop_toTopOf="@+id/villageText" />

</androidx.constraintlayout.widget.ConstraintLayout>